--- a/Tweakers WEB/Tweakers WEB/Content/bootstrap.css
+++ b/Tweakers WEB/Tweakers WEB/Content/bootstrap.css
@@ -52,7 +52,7 @@ audio:not([controls]) {
 }
 
 html {
-  font-family: sans-serif;
+  font-family: Verdana;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
@@ -761,6 +761,9 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+   width:60%;
+        margin-left:auto;
+        margin-right:auto;
 }
 
 .container:before,
@@ -4085,6 +4088,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-collapse {
   max-height: 340px;
   padding-right: 15px;
+  padding-top: 15px;
   padding-left: 15px;
   overflow-x: visible;
   border-top: 1px solid transparent;
@@ -4493,24 +4497,52 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default .navbar-link {
-  color: #FF0000;
+  color: #666666;
 }
 
 .navbar-default .navbar-link:hover {
-  color: #FF0000;
+  color: #666666;
+}
+
+.title{
+   color: #CD3D3C;
+}
+
+.accounttekst{
+    max-width: 600px;
 }
 
 .navbar-inverse {
-  background-color: #680000;
+  background-color: #A11738;
   border-color: #680000;
-
+  font-weight: bold;
 }
+.body-container{
+    padding-top: 30px;
+    width:60%;
+        margin-left:auto;
+        margin-right:auto;
+        background-color: white;
+}
+.bottomfooter{
+    text-align: center;
+    background-color: #313232;
+     color: white;
+     padding-top: 50px;
+     padding-bottom: 200px;
+}
+
 
 .navbar-inverse .navbar-brand {
   color: #E8E8E8;
   padding-top: 30px;
   padding-right: 5px;
   font-size: 160%;
+  font-weight: bold;
+}
+
+.button{    
+    background-color: blue;
 }
 
 .navbar-inverse .navbar-brand:hover,
@@ -4524,23 +4556,24 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-text {
-  color: #999999;
+  color: #E8E8E8;
+  font-weight: bold;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-  color: #999999;
+  color: #E8E8E8;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover,
 .navbar-inverse .navbar-nav > li > a:focus {
-  color: #ffffff;
+  color: #E8E8E8;
   background-color: transparent;
 }
 
 .navbar-inverse .navbar-nav > .active > a,
 .navbar-inverse .navbar-nav > .active > a:hover,
 .navbar-inverse .navbar-nav > .active > a:focus {
-  color: #ffffff;
+  color: #E8E8E8;
   background-color: #FF0000;
 }
 
@@ -4557,7 +4590,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 .navbar-inverse .navbar-toggle:hover,
 .navbar-inverse .navbar-toggle:focus {
-  background-color: #333333;
+  background-color: #666666;
 }
 
 .navbar-inverse .navbar-toggle .icon-bar {
@@ -4572,8 +4605,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .navbar-inverse .navbar-nav > .open > a,
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
-  color: #ffffff;
-  background-color: #FF0000;
+  color: #666666;
+  background-color: #666666;
 }
 
 .navbar-inverse .navbar-nav > .dropdown > a:hover .caret {
@@ -4595,26 +4628,26 @@ textarea.input-group-sm > .input-group-btn > .btn {
 
 @media (max-width: 767px) {
   .navbar-inverse .navbar-nav .open .dropdown-menu > .dropdown-header {
-    border-color: #080808;
+    border-color: #666666;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
     color: #999999;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #ffffff;
+    color: #666666;
     background-color: transparent;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #ffffff;
+    color: #666666;
     background-color: #080808;
   }
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:hover,
   .navbar-inverse .navbar-nav .open .dropdown-menu > .disabled > a:focus {
-    color: #444444;
+    color: #666666;
     background-color: transparent;
   }
 }
@@ -4624,7 +4657,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-link:hover {
-  color: #ffffff;
+  color: white;
 }
 
 .breadcrumb {
