--- a/Tweakers WEB/Tweakers WEB/Site.Master
+++ b/Tweakers WEB/Tweakers WEB/Site.Master
@@ -53,11 +53,11 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Nieuws</a></li>
-                        <li><a runat="server" href="~/About">Reviews</a></li>
-                        <li><a runat="server" href="~/Contact">Pricewatch</a></li>
-                        <li><a runat="server" href="~/Contact">Vraag & Aanbod</a></li>
-                        <li><a runat="server" href="~/Contact">Vergelijken</a></li>
+                        
+                        <li><a runat="server" href="~/Review">Reviews</a></li>
+                        <li><a runat="server" href="~/Pricewatch">Pricewatch</a></li>
+                        <li><a runat="server" href="~/VraagEnAanbod">Vraag & Aanbod</a></li>
+                        <li><a runat="server" href="~/Vergelijken">Vergelijken</a></li>
 
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
