--- a/Tweakers WEB/Tweakers WEB/Site.Master
+++ b/Tweakers WEB/Tweakers WEB/Site.Master
@@ -12,7 +12,7 @@
         <%: Scripts.Render("~/bundles/modernizr") %>
     </asp:PlaceHolder>
     <webopt:bundlereference runat="server" path="~/Content/css" />
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="/tweakerslogo.png" rel="shortcut icon" type="image/png" />
 
 </head>
 <body>
@@ -91,7 +91,9 @@
                       <div class="keyword">
                           <input class="text" type="text" placeholder="Zoek in de site" name="keyword" autocomplete="off" />
                       </div>
+                       <div class="submitbutton">
                        <input class="submit" type="submit" value="" />
+                           </div>
                    </form>
                </div>
              <hr />
@@ -99,6 +101,7 @@
        
         <div class="body-container">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
+                
             </asp:ContentPlaceHolder>
             <hr />
             </div>
