--- a/Tweakers WEB/Tweakers WEB/Content/bootstrap.css
+++ b/Tweakers WEB/Tweakers WEB/Content/bootstrap.css
@@ -1689,6 +1689,52 @@ select optgroup {
   font-size: inherit;
   font-style: inherit;
 }
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+
+
+
+
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+
+/*-------------------------------*/
+/*-------------------------------*/
+/*-------------------------------*/
+
+
+/*-------------------------------*/
+
 
 input[type="file"]:focus,
 input[type="radio"]:focus,
@@ -1777,7 +1823,7 @@ Form{height:100%;}
     font-size: 13px;
 }
 
-.buttonregister{
+.buttonkleur{
     background-color: #0A91C7;
     color: white;
     border-radius: 0;
@@ -4316,8 +4362,6 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-nav > li > a {
-  padding-top: 10px;
-  padding-bottom: 10px;
   line-height: 20px;
 }
 
@@ -6906,73 +6950,60 @@ td.visible-print {
 }
 
 @media print {
-  .visible-print {
-    display: block !important;
-  }
-  tr.visible-print {
-    display: table-row !important;
-  }
-  th.visible-print,
-  td.visible-print {
-    display: table-cell !important;
-  }
-  .hidden-print {
-    display: none !important;
-  }
-  tr.hidden-print {
-    display: none !important;
-  }
-  th.hidden-print,
-  td.hidden-print {
-    display: none !important;
-  }
+    .visible-print {
+        display: block !important;
+    }
 
-#categoryBrowser{width:958px;padding:10px;background:#eeefef;border:1px solid #dddede;border-radius:1px;font-size:12px;margin-bottom:25px}
-#categoryBrowser.sidebar{width:auto}
-#categoryBrowser div{position:relative;width:280px;height:372px;background:#fff;border:1px solid #dddede;border-radius:1px}
-#categoryBrowser.sidebar div{height:auto;width:auto}
-#categoryBrowser ul{margin:0;padding:0;list-style:none;max-height:100%;overflow:auto;overflow-x:hidden}
-#categoryBrowser ul.scrollable{overflow:hidden;max-height:none}
-#categoryBrowser .no_scroll ul{overflow:hidden}
-#categoryBrowser li{height:32px;line-height:32px}
-#categoryBrowser .sublist{display:none;position:absolute;top:9px;left:302px;width:238px;background:#fff;overflow:hidden}
-#categoryBrowser .sublist+.sublist{left:552px;width:414px}
-#categoryBrowser li .sublist{top:-1px;left:321px;overflow:visible}
-#categoryBrowser li li .sublist{left:322px}
-#categoryBrowser li.active>div{display:block}
-#categoryBrowser li:hover{background:#edeeee;box-shadow:inset 0 0 0 1px rgba(0,0,0,0.03)}
-#categoryBrowser li.active{background:#c02b50 no-repeat;background-image:-webkit-linear-gradient(#c02b50,#b9143c);background-image:-moz-linear-gradient(#c02b50,#b9143c);background-image:linear-gradient(#c02b50,#b9143c);box-shadow:inset 0 0 0 1px rgba(0,0,0,0.05)}
-#categoryBrowser li.more{background-image:url(../../g/if/categories/arrows.png);background-repeat:no-repeat;background-position:252px 10px}
-#categoryBrowser li.active.more{background-position:252px -18px;background:url(../../g/if/categories/arrows.png) no-repeat 252px -18px,-webkit-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows.png) no-repeat 252px -18px,-moz-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows.png) no-repeat 252px -18px,linear-gradient(#c02b50,#b9143c) 0 0}
-#categoryBrowser .sublist li.more{background-position:214px 10px}
-#categoryBrowser .sublist li.active.more{background-position:214px -18px;background:url(../../g/if/categories/arrows.png) no-repeat 214px -18px,-webkit-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows.png) no-repeat 214px -18px,-moz-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows.png) no-repeat 214px -18px,linear-gradient(#c02b50,#b9143c) 0 0}
-#categoryBrowser.sidebar li.more{background-position:282px 10px}
-#categoryBrowser.sidebar li.active.more{background-position:282px -18px;background:url(../../g/if/categories/arrows.png) no-repeat 282px -18px,-webkit-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows.png) no-repeat 282px -18px,-moz-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows.png) no-repeat 282px -18px,linear-gradient(#c02b50,#b9143c) 0 0}
-#categoryBrowser li a{display:block;color:#000;text-decoration:none;padding:0 18px}
-#categoryBrowser.sidebar li a{padding:0 10px}
-#categoryBrowser .sublist li a{padding:0 18px}
-#categoryBrowser li.active>a{color:#fff;-webkit-tap-highlight-color:rgba(0,0,0,0);outline:0}
-#categoryBrowser .images ul{width:416px}
-#categoryBrowser .images li{padding:5px;width:93px;height:100px;float:left;background:0;border-right:1px solid #f4f5f5;border-bottom:1px solid #f4f5f5;line-height:17px}
-#categoryBrowser .images li:hover{box-shadow:inset 0 0 25px rgba(239,241,241,1),inset 0 0 0 1px rgba(0,0,0,0.1)}
-#categoryBrowser .images li.lastCol{width:77px;border-right:0}
-#categoryBrowser .images li.lastRow{border-bottom:0}
-#categoryBrowser .images li a{padding:0;background:0;color:#000;text-align:center;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;height:100%;font-size:11px}
-#categoryBrowser .images li img{margin:10px auto 5px;display:block;border:0}
-#categoryBrowser .large{width:664px;height:372px}
-#categoryBrowser .large ul{width:665px}
-#categoryBrowser .large li{width:122px;height:114px}
-#categoryBrowser .large li img{margin:15px auto 10px}
-#categoryBrowser p{margin:16px 20px;padding-top:19px;border-top:1px solid #e8eaea;color:#616464;line-height:21px}
-#categoryBrowser.lastLevel{width:960px;padding:9px}
-#categoryBrowser.lastLevel .images{width:auto;height:auto;overflow:hidden}
-#categoryBrowser.lastLevel .images ul{width:960px}
-#categoryBrowser.lastLevel .images li{width:109px}
-@media only screen and (-webkit-min-device-pixel-ratio:1.25),only screen and (min-resolution:120dpi){
-#categoryBrowser li.more{background-image:url(../../g/if/categories/arrows_x2.png);background-size:12px 150px}
-#categoryBrowser li.active.more{background-position:252px -18px;background:url(../../g/if/categories/arrows_x2.png) no-repeat 252px -18px,-webkit-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows_x2.png) no-repeat 252px -18px,-moz-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows_x2.png) no-repeat 252px -18px,linear-gradient(#c02b50,#b9143c) 0 0;background-size:12px 150px}
-#categoryBrowser .sublist li.active.more{background-position:214px -18px;background:url(../../g/if/categories/arrows_x2.png) no-repeat 214px -18px,-webkit-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows_x2.png) no-repeat 214px -18px,-moz-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows_x2.png) no-repeat 214px -18px,linear-gradient(#c02b50,#b9143c) 0 0;background-size:12px 150px}
-#categoryBrowser.sidebar li.active.more{background-position:282px -18px;background:url(../../g/if/categories/arrows_x2.png) no-repeat 282px -18px,-webkit-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows_x2.png) no-repeat 282px -18px,-moz-linear-gradient(#c02b50,#b9143c) 0 0;background:url(../../g/if/categories/arrows_x2.png) no-repeat 282px -18px,linear-gradient(#c02b50,#b9143c) 0 0;background-size:12px 150px}
-}
+    tr.visible-print {
+        display: table-row !important;
+    }
 
+    th.visible-print,
+    td.visible-print {
+        display: table-cell !important;
+    }
+
+    .hidden-print {
+        display: none !important;
+    }
+
+    tr.hidden-print {
+        display: none !important;
+    }
+
+    th.hidden-print,
+    td.hidden-print {
+        display: none !important;
+    }
+
+    .categorieplaatjes {
+        border: 1px solid white;
+        color: white;
+        width: 65%;
+        background-color: #777;
+
+        height: 50%;
+    }
+
+    .categorielijst {
+        display: inline-block;
+        border: 1px solid white;
+      
+        color: white;
+        width: 30%;
+        background-color: #111;
+        float: left;
+        height: 50%;
+    }
+
+    .categoryBrowser {
+        height:600px;
+        width: 1000px;
+        
+        position: absolute;
+    }
+
+    .testdiv{
+        color:blue;
+    }
 }
